--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- <script type="module" src="/user-management/src/main.jsx"></script> -->
+    <script type="module" src="/coffee-store/src/main.jsx"></script>
   </body>
 </html>
