--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <!-- <script type="module" src="/user-management/src/main.jsx"></script> -->
-    <script type="module" src="/coffee-store/src/main.jsx"></script>
+    <!-- <script type="module" src="/coffee-store/src/main.jsx"></script> -->
+    <script type="module" src="/career-code-client/src/main.jsx"></script>
   </body>
 </html>
