--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <!-- <script type="module" src="/user-management/src/main.jsx"></script> -->
     <!-- <script type="module" src="/coffee-store/src/main.jsx"></script> -->
-    <script type="module" src="/career-code-client/src/main.jsx"></script>
+    <!-- <script type="module" src="/career-code-client/src/main.jsx"></script> -->
+    <script type="module" src="/ema-john-pagination-client-final-main/src/main.jsx"></script>
   </body>
 </html>
