--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,6 +11,7 @@
     <!-- <script type="module" src="/user-management/src/main.jsx"></script> -->
     <!-- <script type="module" src="/coffee-store/src/main.jsx"></script> -->
     <!-- <script type="module" src="/career-code-client/src/main.jsx"></script> -->
-    <script type="module" src="/ema-john-pagination-client-final-main/src/main.jsx"></script>
+    <!-- <script type="module" src="/ema-john-pagination-client-final-main/src/main.jsx"></script> -->
+    <script type="module" src="/zap-shift-client/src/main.jsx"></script>
   </body>
 </html>
